--- a/style/light.css
+++ b/style/light.css
@@ -1,3 +1,19 @@
 body {
-    background-color: red;
+    background-color: white;
+}
+
+.navegacao a{
+    color: black;
+}
+
+.navegacao a:hover{
+    color: rgb(131, 131, 131);
+}
+
+.apresentacao a:hover{
+    color: rgb(131, 131, 131);
+}
+
+.apresentacao a{
+    color: black;
 }
