--- a/style/dark.css
+++ b/style/dark.css
@@ -1,37 +1,37 @@
 body {
-    background-color: #1c1e27;
+    /* background-color: #1c1e27; */
     color: white;
 }
 
-.navegacao a{
+.navegacao a {
     color: rgb(255, 255, 255);
 }
 
-.navegacao a:hover{
+.navegacao a:hover {
     color: rgb(102, 102, 102);
 }
 
-.apresentacao a{
+.apresentacao a {
     color: white;
 }
 
-.apresentacao a:hover{
+.apresentacao a:hover {
     color: rgb(102, 102, 102);
 }
 
-.linksExternos a{
+.linksExternos a {
     background-color: rgb(82, 82, 82);
     color: black;
 }
 
-.linksExternos a:hover{
+.linksExternos a:hover {
     color: rgb(255, 255, 255);
 }
+
 /* .iconesHabilidades button{
     border: 5px rgb(146, 146, 146) solid;
 } */
 
-.iconesHabilidades button h2{
+.iconesHabilidades button h2 {
     color: white;
 }
-
