adicao de projetos, habilidades, certificados, melhora na animação das montanhas, adicao dos coqueiro com animação e iniciado a melhora do light mode

--- a/style/allStyles.css
+++ b/style/allStyles.css
@@ -1,13 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,500&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     /* font-family: Ubuntu, Verdana, Geneva, Tahoma, sans-serif; */
-    font-family: Geneva, Tahoma, Verdana, Ubuntu, sans-serif;
+    /* font-family: Geneva, Tahoma, Verdana, Ubuntu, sans-serif; */
+    font-family: sans-serif;
 }
 
 body {
     overflow-x: hidden;
+    width: 100vw;
 }
 
 #themeButton {
@@ -25,10 +29,6 @@ body {
     z-index: 1000;
 }
 
-.imagemDeFundo {
-    display: flex;
-}
-
 .topo {
     /* padding: 10px; */
     position: fixed;
@@ -38,14 +38,6 @@ body {
     display: flex;
     padding: 0 30px 0px 30px;
     align-items: center;
-
-    background-color: rgba(10, 10, 34, 0.658);
-    box-shadow: 0 8px 32px 0 rgba(29, 37, 150, 0.521);
-    backdrop-filter: blur(13.5px);
-    -webkit-backdrop-filter: blur(13.5px);
-    border-radius: 0 0 15px 15px;
-    border: 1px solid rgba(255, 255, 255, 0.212);
-    /* border: 1px solid rgba(255, 255, 255, 0.18); */
 }
 
 .navegacao {
@@ -89,19 +81,30 @@ body {
 .inicioImagem {
     overflow: hidden;
     height: 100vh;
+    max-height: 100vh;
+    /* width: 100vw; */
 
     /* margin-top: -7px; */
 }
 
+.imagemDeFundo {
+    display: flex;
+    position: relative;
+    z-index: -1;
+    height: 100vh;
+}
+
 .desfoco {
-    box-shadow: 0 0px 32px 10px rgba(29, 37, 150, 0.521);
-    backdrop-filter: blur(13.5px);
-    -webkit-backdrop-filter: blur(13.5px);
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.212);
 
     /* backdrop-filter: blur(5px); */
+    z-index: 1;
+    position: absolute;
     display: flex;
+    top: 0;
+    left: 0;
+    right: 0;
     width: 70vw;
     height: 400px;
     margin: auto;
@@ -117,20 +120,72 @@ body {
     align-items: center;
     /* position: absolute; */
     overflow: hidden;
-
 }
 
-#imagemVaporwave {
+#imagemVaporwave,
+#imagemVaporwaveLight {
     display: flex;
     user-select: none;
-    /* position: relative; */
+    position: absolute;
     z-index: -99;
-    width: 100%;
+    width: 100vw;
+    height: 100%;
+    object-fit: cover;
     filter: blur(10px);
     filter: brightness(0.5);
     /* margin-bottom: -760px; */
     margin-bottom: -56.3%;
     filter: contrast(200%);
+}
+
+#imagemVaporwaveLight {
+    filter: hue-rotate(10deg) brightness(1);
+}
+
+
+.montanhas {
+    display: flex;
+    position: relative;
+    user-select: none;
+    /* width: 50vw; */
+    z-index: 1;
+    /* top: 100vh; */
+    top: -94vh;
+    /* height: 100%; */
+    /* height: 100vh; */
+    /* width: 100%; */
+    filter: contrast(125%);
+    filter: brightness(0.8);
+    filter: blur(5px);
+    /* margin-bottom: -620px; */
+}
+
+.spanMontanha {
+    display: flex;
+    user-select: none;
+}
+
+#coqueiro1,
+#coqueiro2 {
+    display: flex;
+    user-select: none;
+    position: relative;
+    z-index: 1;
+    /* top: 100px; */
+    top: -75vh;
+    height: 1000px;
+    filter: contrast(125%);
+    filter: brightness(0.8);
+    filter: blur(5px);
+}
+
+#coqueiro1 {
+    left: -265px;
+}
+
+#coqueiro2 {
+    transform: scaleX(-1);
+    right: -210px;
 }
 
 #montanha1,
@@ -139,21 +194,23 @@ body {
     user-select: none;
     position: relative;
     z-index: 1;
-    /* height: 150%; */
-    /* width: 100%; */
+    /* top: 100px; */
+    top: -75vh;
+    height: 100%;
     filter: contrast(125%);
     filter: brightness(0.8);
     filter: blur(5px);
-    margin-bottom: -620px;
 }
 
 #montanha1 {
-    left: -350vh;
-    bottom: -120px;
+    /* z-index: 1; */
+    left: -875px;
+    bottom: -50px;
 }
 
 #montanha2 {
-    right: 55vh;
+    /* z-index: 1; */
+    right: 320px;
     bottom: -100px;
 }
 
@@ -161,30 +218,30 @@ body {
     display: flex;
     margin: auto;
     align-items: center;
-    /* justify-content: center; */
     max-width: 1000px;
-    /* margin-top: 75px; */
-    /* margin-top: 50px; */
     padding: 0px 50px;
 }
 
 .escritoApresentacao h1 {
     font-size: 36px;
     margin-bottom: 40px;
+    font-family: Verdana, Ubuntu, sans-serif;
+}
+
+.escritoApresentacao h4,
+#descricao {
+    margin: 10px 0;
+    font-family: Verdana, Ubuntu, sans-serif;
 }
 
 #descricao {
-    font-size: 18px;
-    font-weight: 100;
+    font-size: 16px;
+    font-weight: lighter;
+    text-align: justify;
 }
 
 .escritoApresentacao h4 {
     font-size: 1.5rem;
-}
-
-.escritoApresentacao h4,
-.escritoApresentacao p {
-    margin: 10px 0;
 }
 
 .apresentacao a {
@@ -200,31 +257,21 @@ body {
 
 .linksExternos a {
     padding: 7px 16px;
+    width: 150px;
     margin-left: 10px;
     display: flex;
     align-items: center;
+    justify-content: center;
     text-decoration: none;
-    color: rgb(255, 255, 255);
 
-    background-color: rgba(17, 80, 15, 0.466);
-    box-shadow: 0 0px 32px 0 rgba(102, 29, 150, 0.521);
     backdrop-filter: blur(13.5px);
     -webkit-backdrop-filter: blur(13.5px);
     border-radius: 10px;
-    /* border: 1px solid rgba(255, 255, 255, 0.212); */
-    /* border: 1px solid rgba(9, 158, 121, 0.274); */
-    border: 1px solid rgba(9, 158, 121, 0.274);
-
-    /* border: 1px solid rgb(75, 75, 75); */
 }
 
-#github {
+#github,
+#downloadCurriculo {
     filter: invert();
-}
-
-.linksExternos a:hover {
-    /* background-color: rgba(51, 15, 80, 0.76); */
-    background-color: rgba(9, 158, 121, 0.541);
 }
 
 .linksExternos img {
@@ -232,8 +279,15 @@ body {
     margin-right: 10px;
 }
 
+.habilidade {
+    padding-top: 25px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
 .tituloSubtituloHabilidade {
-    display: block;
+    /* display: block; */
     justify-content: center;
 }
 
@@ -246,9 +300,8 @@ body {
 
 
 .telaHabilidades {
-    position: relative;
     padding-bottom: 120px;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .campoHabilidade {
@@ -257,17 +310,8 @@ body {
     margin: auto;
 }
 
-.habilidade {
-    padding-top: 25px;
-}
-
-
 #imagemFundoHabilidades {
     height: 110vh;
-    /* width: 10000px; */
-    background: linear-gradient(135deg, rgb(255, 0, 255) 20%, rgb(29, 139, 190), cyan);
-    /* filter: brightness(0.3) blur(20px); */
-    filter: brightness(0.4);
     position: fixed;
     width: 110vw;
     left: -20px;
@@ -277,7 +321,6 @@ body {
 }
 
 .iconesHabilidades {
-    /* background-color: red; */
     display: grid;
     grid-template-columns: repeat(5, 18%);
     gap: 10px;
@@ -285,24 +328,17 @@ body {
 }
 
 .iconesHabilidades button {
-    margin-left: 15px;
-    border: 2px rgb(146, 146, 146) solid;
+    /* margin-left: 15px; */
     border-radius: 100%;
     width: 110px;
     height: 110px;
     cursor: pointer;
-
-    background-color: rgba(4, 0, 255, 0.027);
-
-    box-shadow: 0 0px 8px 0 rgba(119, 27, 180, 0.521);
     backdrop-filter: blur(13.5px);
-    filter: saturate(0.6);
+    /* filter: saturate(0.4); */
     -webkit-backdrop-filter: blur(13.5px);
 }
 
 .iconesHabilidades button:hover {
-    background-color: rgba(0, 0, 0, 0.363);
-    box-shadow: 0 0px 32px 0 rgba(27, 120, 173, 0.37);
     filter: saturate(1.7);
 }
 
@@ -310,16 +346,17 @@ body {
     /* max-width: 80px; */
     display: flex;
     margin: auto;
-    width: calc(70% - 20px);
+    width: 60%;
+    max-height: 80%;
+    /* width: calc(70% - 20px); */
     clear: both;
-    /* box-shadow: 0 0px 32px 0 rgba(255, 5, 5, 0.521); */
-    filter: drop-shadow(0px 0px 5px rgba(27, 120, 173, 0.37));
 }
 
 .iconesHabilidades button h2 {
     display: flex;
     justify-content: center;
     font-size: 15px;
+    font-family: sans-serif;
 }
 
 .descricaoHabilidade {
@@ -336,6 +373,7 @@ body {
     align-items: center;
     display: flex;
     flex-direction: column;
+    text-align: justify;
 
     box-shadow: 0 0px 16px 0 rgba(29, 106, 150, 0.301);
     backdrop-filter: blur(13.5px);
@@ -360,6 +398,60 @@ body {
     font-weight: 300;
 }
 
+.certificados {
+    padding-top: 40px;
+}
+
+.conteinerCertificadoUnico,
+tr,
+th,
+td {
+    border: 2px solid rgb(255, 255, 255);
+}
+
+.conteinerCertificadoUnico {
+    border-collapse: collapse;
+    margin: auto;
+}
+
+th,
+td {
+    padding: 10px;
+    text-align: center;
+    max-width: 400px;
+}
+
+td span {
+    font-size: 12px;
+    color: gold;
+}
+
+.imagensCertificadosHabilidade {
+    padding-left: 10px;
+}
+
+td a {
+    text-decoration: none;
+    color: gold;
+    display: flex;
+    align-items: center;
+}
+
+td a:hover {
+    color: #9fe4ffbb;
+}
+
+.imagensCertificadosHabilidade img {
+    width: 20px;
+    padding: 5px 0;
+    max-height: 40px;
+    filter: drop-shadow(0px 0px 5px rgba(255, 217, 0, 0.137));
+}
+
+.imagensCertificadosHabilidade .apache {
+    max-height: 32px;
+}
+
 
 #tituloProjetos {
     display: flex;
@@ -370,7 +462,7 @@ body {
 
 .projetos {
     width: 100vw;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     padding-top: 60px;
     display: flex;
     flex-direction: column;
@@ -386,7 +478,6 @@ body {
     /* float: inline-start; */
     grid-template-columns: repeat(2, 50%);
     gap: 20px;
-    padding-bottom: 500px;
     padding-left: 30px;
 }
 
@@ -399,7 +490,7 @@ body {
     margin-bottom: 30px;
 
     background-color: rgba(177, 177, 177, 0.123);
-    box-shadow: 0 0px 24px -5px rgba(21, 123, 182, 0.658);
+    box-shadow: 0 0px 40px -5px rgba(21, 123, 182, 0.5);
 
     border: 1px solid rgb(100, 100, 100);
     border-radius: 40px;
@@ -410,13 +501,15 @@ body {
 }
 
 .campoProjetos .cadaProjeto p {
-    padding: 0 10px 20px 10px;
-    font-size: 19px;
+    padding: 20px 20px 20px 20px;
+    font-size: 18px;
     line-height: 1.5em;
+    text-align: justify;
+    font-family: sans-serif;
 }
 
 .campoProjetos .cadaProjeto:hover img {
-    filter: drop-shadow(0px 0px 100px rgba(98, 156, 189, 0.658));
+    filter: drop-shadow(0px 0px 25px rgba(38, 176, 255, 0.534));
 }
 
 .cadaProjeto a {
@@ -428,5 +521,20 @@ body {
 }
 
 .cadaProjeto h2 {
+    font-size: 24px;
+    font-family: Ubuntu, Verdana, Geneva, Tahoma, sans-serif;
     padding: 30px 0 20px 0;
+    text-shadow: 0px 0px 20px rgba(0, 255, 234, 0.733);
+    text-decoration: underline 3px;
+    /* box-shadow: 0px 0px 100px rgba(98, 156, 189, 0.658); */
+    /* filter: drop-shadow(0px 0px 100px rgba(98, 156, 189, 0.658)); */
+}
+
+.riscoDosProjetos {
+    border: 0;
+    height: 2px;
+    width: 100%;
+    background-image: linear-gradient(to right, transparent, #9fe4ffbb, transparent);
+    filter: drop-shadow(0px 0px 100px rgba(98, 156, 189, 0.658));
+    box-shadow: 0px 0px 15px rgba(98, 156, 189, 0.658);
 }
