--- a/style/dark.css
+++ b/style/dark.css
@@ -3,6 +3,32 @@ body {
     color: white;
 }
 
+.topo {
+    background-color: rgba(10, 10, 34, 0.658);
+    box-shadow: 0 8px 32px 0 rgba(29, 37, 150, 0.521);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border: 1px solid rgba(255, 255, 255, 0.212);
+}
+
+#imagemVaporwave {
+    display: flex;
+}
+
+#imagemVaporwaveLight {
+    display: none;
+}
+
+#montanha1,
+#montanha2 {
+    display: flex;
+}
+
+#coqueiro1,
+#coqueiro2 {
+    display: none;
+}
+
 .navegacao a {
     color: rgb(255, 255, 255);
 }
@@ -19,19 +45,62 @@ body {
     color: rgb(102, 102, 102);
 }
 
+.desfoco {
+    box-shadow: 0 0px 32px 10px rgba(29, 37, 150, 0.521);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border: 1px solid rgba(255, 255, 255, 0.212);
+}
+
 .linksExternos a {
-    background-color: rgb(82, 82, 82);
-    color: black;
+    color: rgb(255, 255, 255);
+    background-color: rgba(17, 80, 15, 0.466);
+    box-shadow: 0 0px 32px 0 rgba(102, 29, 150, 0.521);
+    border: 1px solid rgba(9, 158, 121, 0.274);
 }
 
 .linksExternos a:hover {
-    color: rgb(255, 255, 255);
+    background-color: rgba(9, 158, 121, 0.541);
+    border: 1px solid rgba(9, 158, 121, 0.541);
 }
 
 /* .iconesHabilidades button{
     border: 5px rgb(146, 146, 146) solid;
 } */
 
+#imagemFundoHabilidades {
+    background: linear-gradient(135deg, rgb(255, 0, 255) 20%, rgb(29, 139, 190), cyan);
+}
+
+#imagemFundoHabilidades {
+    filter: brightness(0.4);
+}
+
+.iconesHabilidades button {
+    border: 2px rgb(146, 146, 146) solid;
+    background-color: rgba(4, 0, 255, 0.027);
+    box-shadow: 0 0px 8px 0 rgba(119, 27, 180, 0.521);
+}
+
+.iconesHabilidades button:hover {
+    background-color: rgba(0, 0, 0, 0.363);
+    box-shadow: 0 0px 32px 0 rgba(27, 120, 173, 0.37);
+}
+
+.iconesHabilidades button img {
+    filter: drop-shadow(0px 0px 5px rgba(27, 120, 173, 0.37));
+}
+
 .iconesHabilidades button h2 {
     color: white;
+}
+
+td #restApiImagem,
+#restApi img {
+    filter: invert();
+}
+
+td span {
+    font-size: 12px;
+    color: gold;
 }
