--- a/style/light.css
+++ b/style/light.css
@@ -1,6 +1,38 @@
-/*
 body {
     background-color: white;
+}
+
+#imagemVaporwave {
+    display: none;
+}
+
+#imagemVaporwaveLight {
+    display: flex;
+}
+
+.desfoco {
+    box-shadow: 0 0px 32px 10px rgba(197, 18, 18, 0.521);
+    backdrop-filter: brightness(3) blur(13.5px);
+    -webkit-backdrop-filter: brightness(3) blur(13.5px);
+    border: 1px solid rgba(255, 255, 255, 0.212);
+}
+
+#montanha1,
+#montanha2 {
+    display: none;
+}
+
+#coqueiro1,
+#coqueiro2 {
+    display: flex;
+}
+
+.topo {
+    background-color: rgba(255, 255, 255, 0.568);
+    box-shadow: 0 8px 32px 0 rgba(197, 18, 18, 0.521);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border: 1px solid rgba(255, 255, 255, 0.212);
 }
 
 .navegacao a {
@@ -8,7 +40,7 @@ body {
 }
 
 .navegacao a:hover {
-    color: rgb(131, 131, 131);
+    color: rgb(197, 18, 18);
 }
 
 .apresentacao a:hover {
@@ -20,15 +52,45 @@ body {
 }
 
 .linksExternos a {
-    background-color: rgb(196, 196, 196);
-    color: white;
+    color: rgb(0, 0, 0);
+    background-color: rgba(197, 18, 18, 0.521);
+    box-shadow: 0 0px 32px 0 rgba(102, 29, 150, 0.521);
+    border: 1px solid rgba(197, 18, 18, 0.521);
 }
 
 .linksExternos a:hover {
-    color: black;
+    background-color: rgba(9, 158, 121, 0.541);
+    border: 1px solid rgba(9, 158, 121, 0.541);
+}
+
+#imagemFundoHabilidades {
+    background: linear-gradient(135deg, rgb(255, 255, 255) 20%, rgb(255, 224, 224), rgb(255, 162, 162));
+}
+
+.iconesHabilidades button {
+    border: 2px rgb(128, 128, 128) solid;
+    background-color: rgba(255, 0, 0, 0.021);
+    /* box-shadow: 0 0px 16px 0 rgba(180, 27, 27, 0.521); */
+}
+
+.iconesHabilidades button:hover {
+    background-color: rgba(255, 193, 193, 0.295);
+    box-shadow: 0 0px 16px 0 rgba(173, 27, 27, 0.37);
 }
 
 .iconesHabilidades button h2 {
     color: black;
 }
-/*
+
+/* .restApiImagem, */
+#restApi img {
+    filter: invert(-1);
+}
+
+td #restApiImagem {
+    filter: invert(0);
+}
+
+#imagemFundoHabilidades {
+    filter: brightness(1);
+}
